objects/Apttus_Approval__SearchFilter__c.object
<CustomObject>
    <description>Represents a search filter</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BusinessObject__c</fullName>
        <description>The business object which provides the context for the filter</description>
        <inlineHelpText>The business object which provides the context for the filter</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>OpportunityLineItem</fullName>
                </value>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__AgreementLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__Agreement_Term_Exception__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__ProductConfiguration__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Config2__LineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Proposal__Proposal__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the filter criteria</description>
        <inlineHelpText>The list of field names used in the filter criteria</inlineHelpText>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Criteria__c</fullName>
        <description>The filter criteria specification</description>
        <inlineHelpText>The filter criteria specification</inlineHelpText>
        <label>Criteria</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Description__c</fullName>
        <description>The description for the filter</description>
        <inlineHelpText>The description for the filter</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The filter evaluation sequence</description>
        <inlineHelpText>The filter evaluation sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__UseType__c</fullName>
        <description>The filter use type</description>
        <inlineHelpText>The filter use type</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Child Filter</fullName>
                </value>
                <value>
                    <fullName>Entry Criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Search Filter (Approvals)</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>Apttus_Approval__Sequence__c</columns>
        <columns>NAME</columns>
        <columns>Apttus_Approval__UseType__c</columns>
        <columns>Apttus_Approval__BusinessObject__c</columns>
        <columns>Apttus_Approval__Description__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SCS_Incremental_Growth</fullName>
        <columns>Apttus_Approval__Sequence__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Incr Growth</value>
        </filters>
        <label>SCS - Incremental Growth</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Filters (Approvals)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>